--- a/SkoutToInp_OAddition.ipynb
+++ b/SkoutToInp_OAddition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1775,7 @@
        "[1219 rows x 376 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,46 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TimeAdd = 0.01\n",
-    "isAdded = False\n",
-    "for index, row in df.iterrows():\n",
-    "    if (row['t(sec)'] > TimeAdd) & ~isAdded:\n",
-    "        rowAdd = row\n",
-    "        isAdded = True\n",
-    "\n",
-    "outputStateValue = rowAdd\n",
-    "outputStateValue = outputStateValue.rename(index={'t(sec)': 'TIME'})\n",
-    "outputStateValue['TIME'] = 1.0\n",
-    "outputStateValue = outputStateValue.rename(index={'P(atm)': 'PRES'})\n",
-    "outputStateValue = outputStateValue.rename(index={'T(K)': 'TEMP'})\n",
-    "\n",
-    "name = 'inp_timeAdd' + str(TimeAdd)\n",
-    "outputStateValue.to_csv(name, sep=' ', header=False, float_format='%g' )\n",
-    "\n",
-    "name_output = 'inp_key_timeAdd' + str(TimeAdd)\n",
-    "outputFile = open(name_output, \"w\")\n",
-    "outputFile.write(\"CONP\\n\")\n",
-    "\n",
-    "with open(name, 'r') as f:\n",
-    "    for line in f:\n",
-    "        if \"TIME\" in line: \n",
-    "            outputFile.write(line)\n",
-    "            outputFile.write(\"DELT 1.0E-12\\n\")\n",
-    "        elif \"PRES\" in line: outputFile.write(line)\n",
-    "        elif \"TEMP\" in line: outputFile.write(line)\n",
-    "        else:                outputFile.write(\"REAC \" + line)\n",
-    "\n",
-    "outputFile.write(\"END\\n\")\n",
-    "outputFile.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,6 +1805,12 @@
     "        if (row['t(sec)'] > TimeAdd) & ~isAdded:\n",
     "            rowAdd = row\n",
     "            isAdded = True\n",
+    "            break\n",
+    "    \n",
+    "    # Add mole fraction to Atomic O\n",
+    "    # print(rowAdd.at['O'])\n",
+    "    rowAdd.at['O'] = rowAdd.at['O'] + 1E-8\n",
+    "    # print(rowAdd.at['O'])\n",
     "    \n",
     "    # Edit the inner value of Series\n",
     "    outputStateValue = rowAdd\n",
@@ -1857,7 +1824,7 @@
     "    outputStateValue.to_csv(name, sep=' ', header=False, float_format='%g' )\n",
     "    \n",
     "    # Open the keyword inpfile used in SENKIN\n",
-    "    name_output = 'inp_key_timeAdd' + str(TimeAdd)\n",
+    "    name_output = 'inp_key_timeAdd' + \"{0:.2f}\".format(TimeAdd)\n",
     "    outputFile = open(name_output, \"w\")\n",
     "    outputFile.write(\"CONP\\n\")\n",
     "    \n",
@@ -1875,88 +1842,6 @@
     "\n",
     "    # Update TimeAdd\n",
     "    TimeAdd = TimeAdd + 0.01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TIME          1.000000e+00\n",
-       "PRES          1.000000e+00\n",
-       "TEMP          6.000000e+02\n",
-       "nC7H16        1.380704e-02\n",
-       "nC7H15a       7.776920e-18\n",
-       "nC7H15b       1.124861e-17\n",
-       "nC7H15c       1.129201e-17\n",
-       "nC7H15d       5.546061e-18\n",
-       "C6H13a        1.205644e-23\n",
-       "C5H11a        1.218597e-21\n",
-       "nC3H7         4.648332e-21\n",
-       "nC4H9         3.658675e-21\n",
-       "C7H15OOa      1.839870e-15\n",
-       "C7H15Oa       1.593434e-25\n",
-       "C3H6          5.027023e-17\n",
-       "C7H15OOb      3.093656e-15\n",
-       "C7H15Ob       1.421810e-25\n",
-       "C6H12a        1.333231e-17\n",
-       "n1C4H8        6.077390e-17\n",
-       "C7H15OOc      3.138811e-15\n",
-       "C7H15Oc       1.441433e-25\n",
-       "C5H10a        6.029998e-17\n",
-       "C7H15OOd      2.220491e-15\n",
-       "C7H15Od       9.970533e-26\n",
-       "C6H13b        4.286605e-27\n",
-       "C6H13c        7.410309e-26\n",
-       "C6H13OOa      2.785871e-21\n",
-       "C6H13Oa       1.053170e-35\n",
-       "C5H11b        5.557565e-25\n",
-       "C5H11OOa      2.320330e-19\n",
-       "                  ...     \n",
-       "CH3O          4.511647e-27\n",
-       "CH3OH         2.781927e-27\n",
-       "CO2           1.966472e-26\n",
-       "HOCO          0.000000e+00\n",
-       "HOCHO         1.913394e-35\n",
-       "CH3OO         7.173733e-19\n",
-       "CH3OOH        6.451215e-22\n",
-       "C2H           7.607992e-55\n",
-       "C2H2          3.547041e-35\n",
-       "C2H3          5.916520e-34\n",
-       "C2H4          1.109388e-17\n",
-       "C2H5          2.794351e-21\n",
-       "C2H6          1.740451e-23\n",
-       "HCCO          2.041882e-33\n",
-       "CH2CO         1.002932e-18\n",
-       "CH3CO         3.564885e-22\n",
-       "CH2CHO        5.082918e-19\n",
-       "C2H4cyO       1.151512e-22\n",
-       "CH3CHO        5.730330e-17\n",
-       "C2H5O         2.393988e-27\n",
-       "pC2H4OH       4.992404e-32\n",
-       "sC2H4OH       4.318788e-38\n",
-       "C2H5OH        7.902782e-32\n",
-       "CH3CO2        7.229678e-30\n",
-       "C2H4OOH       4.321281e-22\n",
-       "C2H5OO        5.012195e-18\n",
-       "C2H5OOH       3.976103e-21\n",
-       "CH3C(O)OO     1.519494e-19\n",
-       "CH3C(O)OOH    8.156759e-23\n",
-       "O2C2H4OH      1.035440e-29\n",
-       "Name: 67, Length: 376, dtype: float64"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outputStateValue.append(delt)\n",
-    "outputStateValue"
    ]
   }
  ],
